clusters/cl01tl/manifests/shelfmark/Service-shelfmark.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  labels:
    app.kubernetes.io/instance: shelfmark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shelfmark
    app.kubernetes.io/service: shelfmark
    helm.sh/chart: shelfmark-5.2.1
  namespace: shelfmark
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8084
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: shelfmark
    app.kubernetes.io/name: shelfmark
