clusters/cl01tl/manifests/shelfmark/HTTPRoute-shelfmark.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shelfmark
  labels:
    app.kubernetes.io/instance: shelfmark
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: shelfmark
    helm.sh/chart: shelfmark-5.1.0
  namespace: shelfmark
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "shelfmark.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: shelfmark
          namespace: shelfmark
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
